vcs/specs/parser/fail/lexer/invalid_escape.vr
// @test: parse-fail
// @level: L0
// @tags: parser, lexer, strings, escape, error
// @description: Test invalid escape sequence detection
// @expected-error: E002

fn test_invalid_escape() {
    let s = "hello\qworld";
}
